--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,7 @@ html, body {
 .main-container {
     height: 100%;
     display: grid;
-    grid-template-columns: 10vw 90vw;
+    grid-template-columns: 10em 9fr;
 }
 
 #title {
@@ -60,6 +60,11 @@ html, body {
     visibility: hidden;
 }
 
+#content {
+    display: grid;
+    grid-template-rows: 42em 2em;
+}
+
 #carousal {
     margin: 5em 10em 0 10em;
     text-align: center;
@@ -84,8 +89,6 @@ html, body {
 }
 
 #nav-dots {
-    height: 10px;
-    width: 10em;
     margin: 0 auto;
 }
 
