--- a/style/style.css
+++ b/style/style.css
@@ -10,8 +10,6 @@ html, body {
 
 .main-container {
     height: 100%;
-    display: grid;
-    grid-template-columns: 10em 9fr;
 }
 
 #title {
@@ -62,26 +60,27 @@ html, body {
 
 #content {
     display: grid;
-    grid-template-rows: 42em 2em;
+    grid-template-rows: fit-content(100%) fit-content(100%);
 }
 
 #carousal {
-    margin: 5em 10em 0 10em;
-    text-align: center;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 3vw 70vw 3vw;
 }
 
 .food-img {
-    max-width: 50vw;
-    max-height: auto;
+    max-width: 70vw;
+    max-height: 100%;
+    justify-self: center;
 }
 
 .arrow {
-    position: relative;
-    bottom: 5em;
-    margin: 0 10px;
-    font-size: 3em;
+    font-size: 3vw;
     color: #bcbebf;
     cursor: pointer;
+    align-self: center;
+    justify-self: center;
 }
 
 .arrow:hover {
@@ -106,7 +105,7 @@ html, body {
     background-color: black;
 }
 
-@media (max-width: 470px) {
+@media (max-width: 990px) {
     #hamburger-menu {
         float: left;
         position: relative;
@@ -116,12 +115,17 @@ html, body {
     }
 
     #title>label {
-        font-size: 6vw;
+        font-size: 4vw;
     }
 }
 
-@media (min-width: 470px) {
+@media (min-width: 990px) {
     #nav-bar {
         display: inline-block;
+    }
+
+    .main-container {
+        display: grid;
+        grid-template-columns: 10em 9fr;
     }
 }
